--- a/app/views/players/new.html.erb
+++ b/app/views/players/new.html.erb
@@ -1,7 +1,7 @@
 <h1>New Player</h1>
 
 <%= form_for(@player) do |f| %>
-  <%= f.label(:name) %>
+  <%= f.label(:name, 'Player Name') %>
   <%= f.text_field(:name) %>
   <br />
   <%= f.submit %>
